--- a/chongwudaily/miniprogram/pages/quchong/quchong.wxml
+++ b/chongwudaily/miniprogram/pages/quchong/quchong.wxml
@@ -1,34 +1,42 @@
 <!--miniprogram/pages/quchong/quchong.wxml-->
 <view class="con_yiqu">
-    <van-icon name="close" />
-    <van-cell title="选择宠物" value="" clickable center bind:click="openchong" border="{{ false }}" />
+<view class="xuan">
+    <van-cell title="选择宠物" value="" clickable center bind:click="openchong" border="{{ false }}" /></view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xuan_popup }}" position="bottom" bind:close="closechong">
         <van-picker show-toolbar columns="{{ chong_columns }}" bind:cancel="chong_cancel" bind:confirm="chong_confirm" />
     </van-popup>
-    <van-cell title="用药品牌" value="" clickable center bind:click="openpai" border="{{ false }}" />
+<view class="yong">
+    <van-cell title="用药品名" value="" clickable center bind:click="openpai" border="{{ false }}" /></view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ pai_popup }}" position="bottom" bind:close="closepai">
         <van-picker show-toolbar columns="{{ pai_columns }}" bind:cancel="pai_cancel" bind:confirm="pai_confirm" />
     </van-popup>
+<view class="shi">
     <van-cell title="驱虫时间" value="" clickable center bind:click="openzhu" border="{{ false }}" />
-    
+    </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ zhu_popup }}" position="bottom" bind:close="closezhu">
         <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" bind:input="zhuInput" bind:cancel="zhu_cancel" bind:confirm="zhu_confirm" />
     </van-popup>
-    <van-cell title="后期反应" value="" clickable center bind:click="openfan" border="{{ false }}" />
+<view class="hou">
+    <van-cell title="后期反应" value="" clickable center bind:click="openfan" border="{{ false }}" /></view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ fan_popup }}" position="bottom" bind:close="closefan">
         <van-picker show-toolbar columns="{{ fan_columns }}" bind:cancel="fan_cancel" bind:confirm="fan_confirm" />
     </van-popup>
-    <van-cell title="下次时间" value="" clickable center bind:click="openxia" border="{{ false }}" />
+<view class="xia">
+    <van-cell title="下次时间" value="" clickable center bind:click="openxia" border="{{ false }}" /></view>
      <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:close="closexia">
         <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" bind:input="xiaInput" bind:cancel="xia_cancel" bind:confirm="xia_confirm" />
     </van-popup>
-    <van-cell label="可选项" title="驱虫照片" border="{{ false }}" />
+<view class="tian">
+    <van-cell label="可选项" title="添加照片" border="{{ false }}" />
+    </view>
     <view style="padding:0 0 0 4vw">
         <van-uploader file-list="{{ fileList }}" bind:after-read="afterRead" />
     </view>
+<view class="ti">
     <van-cell label="建议开启" title="智能提醒" value="" center border="{{ false }}">
         <van-switch checked="{{ checked }}" size="20px" bind:change="oChange" />
     </van-cell>
+    </view>
     <view class="qu">
         <view class="push_qu" bindtap="push_qu">
             <text space="nbsp">完 成</text>
