--- a/chongwudaily/miniprogram/pages/yimiao/yimiao.wxss
+++ b/chongwudaily/miniprogram/pages/yimiao/yimiao.wxss
@@ -2,11 +2,31 @@
 .con_yimiao {
     background-color: #ffffff;
 }
-
 .value-class {
     flex: none !important;
 }
 
+.xuan{
+    margin: 3vh 0 3vh 0;
+}
+.zhu{
+    margin: 1.5vh 0 3vh 0;
+}
+.hou{
+    margin: 1.5vh 0 3vh 0;
+}
+.xia{
+    margin: 1.5vh 0 3vh 0;
+}
+.pin{
+    margin: 1.5vh 0 3vh 0;
+}
+.biao{
+    margin: 1.5vh 0 1.5vh 0;
+}
+.ti{
+    margin: 1.5vh 0 1.5vh 0;
+}
 .miao {
     width: 100vw;
     height: 7vh;
@@ -19,11 +39,11 @@
 }
 
 .push_miao {
-    width: 90vw;
-    height: 75rpx;
+    width: 670rpx;
+    height: 80rpx;
     border-radius: 50px;
     text-align: center;
-    line-height: 75rpx;
+    line-height: 80rpx;
     color: #ffffff;
     background: linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0));
 
