--- a/chongwudaily/miniprogram/pages/dangan/dangan.wxss
+++ b/chongwudaily/miniprogram/pages/dangan/dangan.wxss
@@ -1,5 +1,106 @@
 /* miniprogram/pages/dangan/dangan.wxss */
 .dang_an{
     width: 100vw;
+    background-color: #ffffff;
+    color: #333;
+}
+.tou{
+    height: 200rpx;
+    border: solid 1rpx #707070;
+    display: flex;
+    align-items: center;
+    margin: 0 0 1.5vh 0;
+}
+.tou_tu{
+    width: 230rpx;
+    height: 200rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tou_png{
+    width: 150rpx;
+    height: 150rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    border: solid 1rpx #707070;
+    z-index: 100;
+}
+.lei_pic{
+    width: 35rpx;
+    height: 35rpx;
+    background-color: #ffffff;
+    border-radius:50% ;
+    position: absolute;
+    left: 163rpx;
+    top: 130rpx;
+    z-index: 101;
+}
+.con_zhu{
+    display: flex;
+    flex-direction: column;
+}
+.con_name{
+    display: flex;
+    align-items: center;
+}
+.name{
+    margin: 0 7rpx 0 0;
+    font-size: 14px;
+    font-weight: bolder;
+    color: #333333;
+}
+.sex{
+    width: 35rpx;
+    height: 35rpx;
+    margin: 3rpx 17rpx 0 0;
+}
+.age{
+    font-size: 12px;
+    margin: 10rpx 0 0 0;
+}
+.kg{
+    font-size: 12px;
+    margin: 10rpx 0 0 17rpx;
+}
+
+.con_fu{
+    width:470rpx;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+    font-weight: bolder;
+    margin: 27rpx 0 0 0;
+    color: #888888;
+
+}
+.tian {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    padding: 3vh 0 0 0;
+
+}
+.tianjia {
+    width: 670rpx;
+    height: 80rpx;
+    line-height: 80rpx;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    font-size: 15px;
+    font-weight: bolder;
+    color: #ffffff;
     
+    background: linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0));
+
+}
+.jia_tu{
+    width: 35rpx;
+    height: 35rpx;
+    margin: 3rpx 17rpx 0 0;
 }
