--- a/chongwudaily/miniprogram/pages/home/home.wxss
+++ b/chongwudaily/miniprogram/pages/home/home.wxss
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    
+    background-color: #ffffff;
+    color: #333;
 }
 
 .function-pick {
