--- a/chongwudaily/miniprogram/pages/yaoyu/yaoyu.wxml
+++ b/chongwudaily/miniprogram/pages/yaoyu/yaoyu.wxml
@@ -1,41 +1,42 @@
-<!--miniprogram/pages/yaoyu/yaoyu.wxml-->
+<!-- miniprogram/pages/yaoyu/yaoyu.wxml -->
 <view class="con_yiyao">
-    <van-icon name="close" />
     <view class="xuan">
-    <van-cell title="选择宠物" value="" clickable center bind:click="openchong" border="{{ false }}" /></view>
-    <van-popup  round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xuan_popup }}" position="bottom" bind:close="closechong">
+        <van-cell title="选择宠物" value="" clickable center bind:click="openchong" border="{{ false }}" />
+    </view>
+    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xuan_popup }}" position="bottom" bind:close="closechong">
         <van-picker show-toolbar columns="{{ chong_columns }}" bind:cancel="chong_cancel" bind:confirm="chong_confirm" />
     </van-popup>
-    <view class="yong">
-    <van-cell title="用药品名" value="" clickable center bind:click="openpai" border="{{ false }}" /></view>
-    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ pai_popup }}" position="bottom" bind:close="closepai">
-        <van-picker show-toolbar columns="{{ pai_columns }}" bind:cancel="pai_cancel" bind:confirm="pai_confirm" />
-    </van-popup>
     <view class="shi">
-    <van-cell title="药浴时间" value="" clickable center bind:click="openzhu" border="{{ false }}" /></view>
-    
+        <van-cell title="药浴时间" value="" clickable center bind:click="openzhu" border="{{ false }}" />
+    </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ zhu_popup }}" position="bottom" bind:close="closezhu">
         <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" bind:input="zhuInput" bind:cancel="zhu_cancel" bind:confirm="zhu_confirm" />
     </van-popup>
     <view class="hou">
-    <van-cell title="后期反应" value="" clickable center bind:click="openfan" border="{{ false }}" /></view>
+        <van-cell title="后期反应" value="" clickable center bind:click="openfan" border="{{ false }}" />
+    </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ fan_popup }}" position="bottom" bind:close="closefan">
         <van-picker show-toolbar columns="{{ fan_columns }}" bind:cancel="fan_cancel" bind:confirm="fan_confirm" />
     </van-popup>
     <view class="xia">
-    <van-cell title="下次时间" value="" clickable center bind:click="openxia" border="{{ false }}" /></view>
-     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:close="closexia">
+        <van-cell title="下次时间" value="" clickable center bind:click="openxia" border="{{ false }}" />
+    </view>
+    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:close="closexia">
         <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" bind:input="xiaInput" bind:cancel="xia_cancel" bind:confirm="xia_confirm" />
     </van-popup>
+    <view class="yong">
+        <van-field value="{{ pin_value }}" label="用药品名" autosize border="{{ false }}" />
+    </view>
     <view class="bing">
-    <van-cell label="无病变则不需上传" title="病变部位" border="{{ false }}" /></view>
+        <van-cell label="无病变则不需上传" title="病变部位" border="{{ false }}" />
+    </view>
     <view style="padding:0 0 0 4vw">
         <van-uploader file-list="{{ fileList }}" bind:after-read="afterRead" />
     </view>
     <view class="ti">
-    <van-cell label="建议开启" title="智能提醒" value="" center border="{{ false }}">
-        <van-switch checked="{{ checked }}" size="20px" bind:change="oChange" />
-    </van-cell>
+        <van-cell label="建议开启" title="智能提醒" value="" center border="{{ false }}">
+            <van-switch checked="{{ checked }}" size="20px" bind:change="oChange" />
+        </van-cell>
     </view>
     <view class="yao">
         <view class="push_yao" bindtap="push_yao">
