--- a/chongwudaily/miniprogram/pages/yimiao/yimiao.wxml
+++ b/chongwudaily/miniprogram/pages/yimiao/yimiao.wxml
@@ -39,8 +39,8 @@
         </van-cell>
     </view>
     <view class="miao">
-        <view class="push_miao" bindtap="push_miao">
-            <text space="nbsp">完 成</text>
-        </view>
+        <van-button bind:click="push_miao" round color="linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0))" custom-style=" width: 670rpx;height: 80rpx;" >
+            完 成
+        </van-button>
     </view>
 </view>
