--- a/chongwudaily/miniprogram/pages/bianji_dang/bianji_dang.wxss
+++ b/chongwudaily/miniprogram/pages/bianji_dang/bianji_dang.wxss
@@ -1,4 +1,4 @@
-/* miniprogram/pages/tianjia/tianjia.wxss */
+/* miniprogram/pages/bianji_dang/bianji_tian.wxss */
 .con_tian {
     color: #333;
     background-color: #ffffff;
@@ -215,10 +215,21 @@
     margin: 1.07vh 0 2.14vh 0;
 }
 
-.wancheng {
+.guanli {
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 2vh 0 3vh 0;
-
+    justify-content: center;
+    padding: 2vh 16px 3vh 16px;
+}
+.shanchu{
+    width: 375rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.baocun{
+    width: 375rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
