--- a/chongwudaily/miniprogram/pages/home/home.wxss
+++ b/chongwudaily/miniprogram/pages/home/home.wxss
@@ -2,80 +2,79 @@
 
 .background {
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
     background-color: #ffffff;
-    color: #333;
+    color: #505050;
 }
 
 .function-pick {
-    width: 100vw;
-    height: 30vh;
     display: flex;
     flex-direction: column;
-
 }
 
 .pickone {
-    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    margin: 35rpx 0 30rpx 0;
+}
+.one_icon{
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-
-.hezi {
-    height:15vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .yimiao_img {
     width: 100rpx;
     height: 100rpx;
-    margin: 15rpx 0 15rpx 0;
 
 }
 
 .quchong_img {
-    width: 100rpx;
+    width: 93rpx;
     height: 100rpx;
-    margin: 15rpx 0 15rpx 0;
+    padding: 0 0 0 7rpx;
 }
 
 .tijian_img {
     width: 100rpx;
-    height: 100rpx;
-    margin: 15rpx 0 15rpx 0;
+    height: 107rpx;
+    padding: 0 0 0 0;
 }
 
-.picktwo {
-    height: 15vh;
+.one_text {
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
+.picktwo {
+    display: flex;
+    flex-direction: column;
+    margin: 25rpx 0 35rpx 0;
+}
+.two_icon{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 .xizao_img {
-    width: 100rpx;
-    height: 100rpx;
-    margin: 15rpx 0 15rpx 0;
+    width: 88rpx;
+    height: 105rpx;
+    padding: 0 7rpx 0 0;
 }
 
 .meirong_img {
-    width: 100rpx;
-    height: 100rpx;
-    margin: 15rpx 0 15rpx 0;
+    width: 112rpx;
+    height: 110rpx;
 }
 
 .yaoyu_img {
     width: 100rpx;
     height: 100rpx;
-    margin: 15rpx 0 15rpx 0;
 }
-
+.two_text{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 .fenge {
     width: 100vw;
     height: 3vh;
@@ -83,7 +82,6 @@
 }
 
 .pedia {
-    height: 30vh;
     text-align: center;
     display: flex;
     flex-direction: column;
