--- a/chongwudaily/miniprogram/pages/meirong/meirong.wxml
+++ b/chongwudaily/miniprogram/pages/meirong/meirong.wxml
@@ -24,8 +24,8 @@
         </van-cell>
     </view>
     <view class="mei">
-        <view class="push_mei" bindtap="push_mei">
-            <text space="nbsp">完 成</text>
-        </view>
+        <van-button bind:click="push_mei" round color="linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0))" custom-style=" width: 670rpx;height: 80rpx;" >
+            完 成
+        </van-button>
     </view>
 </view>
