--- a/chongwudaily/miniprogram/pages/xizao/xizao.wxml
+++ b/chongwudaily/miniprogram/pages/xizao/xizao.wxml
@@ -24,8 +24,8 @@
         </van-cell>
     </view>
     <view class="zao">
-        <view class="push_zao" bindtap="push_zao">
-            <text space="nbsp">完 成</text>
-        </view>
+        <van-button bind:click="push_zao" round color="linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0))" custom-style=" width: 670rpx;height: 80rpx;" >
+            完 成
+        </van-button>
     </view>
 </view>
