--- a/chongwudaily/miniprogram/pages/yaoyu/yaoyu.wxss
+++ b/chongwudaily/miniprogram/pages/yaoyu/yaoyu.wxss
@@ -8,44 +8,33 @@
     flex: none !important;
 }
 .xuan{
-    margin: 3vh 0 3vh 0;
+    margin: 2vh 0 2vh 0;
 }
 .yong{
-    margin: 1.5vh 0 3vh 0;
+    margin: 1vh 0 2vh 0;
 }
 .shi{
-    margin: 1.5vh 0 3vh 0;
+    margin: 1vh 0 2vh 0;
 }
 .hou{
-    margin: 1.5vh 0 3vh 0;
+    margin: 1vh 0 2vh 0;
 }
 .xia{
-    margin: 1.5vh 0 3vh 0;
+    margin: 1vh 0 2vh 0;
 }
 
 .bing{
-    margin: 1.5vh 0 1.5vh 0;
+    margin: 1vh 0 1vh 0;
 }
 .ti{
-    margin: 1.5vh 0 1.5vh 0;
+    margin: 1vh 0 1vh 0;
 }
+/* 完成按钮 */
 .yao {
-    width: 100vw;
     height: 7vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
-    padding: 3vh 0 0 0;
-
-}
-.push_yao {
-    width: 670rpx;
-    height: 80rpx;
-    border-radius: 50px;
-    text-align: center;
-    line-height: 80rpx;
-    color: #ffffff;
-    background: linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0));
+    padding: 3vh 0 3vh 0;
 
 }
