--- a/chongwudaily/miniprogram/pages/yaoyu/yaoyu.wxml
+++ b/chongwudaily/miniprogram/pages/yaoyu/yaoyu.wxml
@@ -28,7 +28,7 @@
         <van-field value="{{ pin_value }}" label="用药品名" autosize border="{{ false }}" />
     </view>
     <view class="bing">
-        <van-cell label="无病变则不需上传" title="病变部位" border="{{ false }}" />
+        <van-cell label="选填" title="病变部位" border="{{ false }}" />
     </view>
     <view style="padding:0 0 0 4vw">
         <van-uploader file-list="{{ fileList }}" bind:after-read="afterRead" />
