--- a/chongwudaily/miniprogram/pages/meirong/meirong.wxml
+++ b/chongwudaily/miniprogram/pages/meirong/meirong.wxml
@@ -10,7 +10,7 @@
         <van-cell title="美容时间" value="" clickable center bind:click="openzhu" border="{{ false }}" />
     </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ zhu_popup }}" position="bottom" bind:close="closezhu">
-        <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" bind:input="zhuInput" bind:cancel="zhu_cancel" bind:confirm="zhu_confirm" />
+        <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}"  bind:input="zhuInput" bind:cancel="zhu_cancel" bind:confirm="zhu_confirm" />
     </van-popup>
     <view class="hou">
         <van-cell title="后期反应" value="" clickable center bind:click="openfan" border="{{ false }}" />
@@ -22,9 +22,9 @@
         <van-cell title="下次时间" value="" clickable center bind:click="openxia" border="{{ false }}" />
     </view>
     <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:close="closexia">
-        <van-datetime-picker show-toolbar type="date" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" bind:input="xiaInput" bind:cancel="xia_cancel" bind:confirm="xia_confirm" />
+        <van-datetime-picker show-toolbar type="datetime" value="{{ currentDate }}" min-date="{{ minDate }}" max-date="{{ maxDate }}" bind:input="xiaInput" bind:cancel="xia_cancel" bind:confirm="xia_confirm" />
     </van-popup>
-     <view class="tian">
+    <view class="tian">
         <van-cell label="选填" title="添加照片" border="{{ false }}" />
     </view>
     <view style="padding:0 0 0 4vw">
@@ -36,7 +36,7 @@
         </van-cell>
     </view>
     <view class="mei">
-        <van-button bind:click="push_mei" round color="linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0))" custom-style=" width: 670rpx;height: 80rpx;" >
+        <van-button bind:click="push_mei" round color="linear-gradient(to right,rgb(255, 115, 90), rgb(255, 187, 0))" custom-style=" width: 670rpx;height: 80rpx;">
             完 成
         </van-button>
     </view>
