--- a/chongwudaily/miniprogram/pages/yimiao_note/yimiao_note.wxml
+++ b/chongwudaily/miniprogram/pages/yimiao_note/yimiao_note.wxml
@@ -1,15 +1,34 @@
 <!-- miniprogram/pages/yimiao_note/yimiao_note.wxml -->
-<van-panel>
-    <view class="cw_info" slot="header">
-        <image class="userinfo-avatar" ></image>
-        <view class="headinfo">
-            <text class="userinfo-nickname">超级大黄</text>
-            <view class="nowtime">2020-03-21 16:35</view>
+<view class="note">
+    <view class="cw_info" slot="header" bindtap="to_bianji">
+        <image class="cw-avatar"></image>
+        <view class="head">
+            <text class="cw-nickname">超级大黄</text>
+            <text class="now_time">2020-03-21 16:35</text>
         </view>
     </view>
     <view class="push">
-        <view class="item">时间：</view>
-        <view class="item">地点：</view>
-        <view class="item">项目：</view>
+        <view class="item_left">
+            <view class="pinpai">国产百斯特</view>
+            <view class="fan">反应良好</view>
+        </view>
+        <view class="item_right1">
+            <van-count-down use-slot time="{{ time }}" bind:change="onChange">
+                <view class="dao">
+                    <view class="item">{{ timeData.days }}</view>
+                    <view class="item">{{ timeData.hours }}</view>
+                    <view class="item">{{ timeData.minutes }}</view>
+                    <view class="item">{{ timeData.seconds }}</view>
+                </view>
+            </van-count-down>
+        </view>
+        <!-- 未开启提醒时由具体时间代替倒计时 -->
+        <!-- <view class="item_right0">2020-03-21 16:35</view> -->
     </view>
-</van-panel>
+    <view class="pic_miao">
+    <van-uploader file-list="{{ fileList }}" preview-size="80px"  disabled max-count="3" deletable="{{false}}"/>
+        <!-- <view class="pic"></view>
+        <view class="pic"></view>
+        <view class="pic"></view> -->
+    </view>
+</view>
